--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ color: white;
 
   <center> 
 
-   <b><font color="red" face="Iceberg" size="80">BRAVEXPLOITER TEAM</font></b> 
+   <b><font color="red" face="Iceberg" size="80">DARKSKULL7 SITE</font></b> 
 
    <br>
 
