--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <meta name="author" content="Kumpulan Tutorial Mengenai Hacking'>  
 
-  <link rel="icon" type="image/gif" href="https://1.bp.blogspot.com/-EpVsNpaST2g/YO5bo-qdzGI/AAAAAAAAAq0/sILcaMDt8zAOSBrjc5SFtqOfyZQYc5w5QCLcBGAsYHQ/s736/ec1966263a6291426fbfeb6b841b14f6.jpg">
+  <link rel="icon" type="image/jpg" href="https://1.bp.blogspot.com/-EpVsNpaST2g/YO5bo-qdzGI/AAAAAAAAAq0/sILcaMDt8zAOSBrjc5SFtqOfyZQYc5w5QCLcBGAsYHQ/s736/ec1966263a6291426fbfeb6b841b14f6.jpg">
 
 <br />
 <script>
