--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 
   <meta charset="utf-8"> 
 
-  <meta name="description" content="Kumpulan Tutorial Mengenai Hacking'> 
+  <meta name="description" content="Kumpulan Tutorial Mengenai Hacking"> 
 
-  <meta name="keywords" content="Kumpulan Tutorial Mengenai Hacking'> 
+  <meta name="keywords" content="Kumpulan Tutorial Mengenai Hacking"> 
 
-  <meta name="author" content="Kumpulan Tutorial Mengenai Hacking'>  
+  <meta name="author" content="Kumpulan Tutorial Mengenai Hacking">  
 
-  <link rel="icon" type="image/jpg" href="https://1.bp.blogspot.com/-EpVsNpaST2g/YO5bo-qdzGI/AAAAAAAAAq0/sILcaMDt8zAOSBrjc5SFtqOfyZQYc5w5QCLcBGAsYHQ/s736/ec1966263a6291426fbfeb6b841b14f6.jpg">
+  <link rel= "icon" href="https://telegra.ph/file/c3370928e66216531fee2.jpg">
 
 <br />
 <script>
