--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <html>
-
- <head> 
-
-  <title>DarkSkull7 eks Dimas</title>
-
-  <meta charset="utf-8"> 
+<body>
+  <title>DARKSKULL7 SITE</title>
+    <meta charset="utf-8"> 
 
   <meta name="description" content="Kumpulan Tutorial Mengenai Hacking"> 
 
@@ -12,7 +9,8 @@
 
   <meta name="author" content="Kumpulan Tutorial Mengenai Hacking">  
 
-  <link rel= "icon" href="https://telegra.ph/file/c3370928e66216531fee2.jpg">
+  <link rel= "icon" href="https://telegra.ph/file/c3370928e66216531fee2.jpg"></body>
+ <head> 
 
 <br />
 <script>
