--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <title>DARKSKULL7 SITE</title>
+  <head><title>DARKSKULL7 SITE</title>
     <meta charset="utf-8"> 
 
   <meta name="description" content="Kumpulan Tutorial Mengenai Hacking"> 
@@ -8,7 +8,7 @@
 
   <meta name="author" content="Kumpulan Tutorial Mengenai Hacking">  
 
-  <link rel= "icon" href="https://telegra.ph/file/c3370928e66216531fee2.jpg"></body>
+  <link rel= "icon" href="https://telegra.ph/file/c3370928e66216531fee2.jpg"></head>
 <body>
  <head> 
 
